--- a/screensaverwallpaper/index.html
+++ b/screensaverwallpaper/index.html
@@ -11,6 +11,8 @@
       height: 100vh;
       margin: 0;
       background-color: #111;
+
+      overflow-x: auto;
     }
     img {
       width: 500%;
