--- a/screensaverwallpaper/index.html
+++ b/screensaverwallpaper/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Image at 50% Size</title>
+  <title>Image at 500%</title>
   <style>
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
       background-color: #111;
-
-      overflow-x: auto;
+      overflow: auto;
     }
     img {
-      width: 500%;
+      width: 500vw;
       height: auto;
     }
   </style>
