--- a/screensaverwallpaper/index.html
+++ b/screensaverwallpaper/index.html
@@ -25,7 +25,7 @@
       left: 0;
       width: 150vw;
       height: 150vh;
-      pointer-events: none; /* So mouse can pass through */
+      pointer-events: none;
       transition: transform 0.1s ease-out;
       will-change: transform;
     }
