--- a/screensaverwallpaper/index.html
+++ b/screensaverwallpaper/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mouse-Following YouTube Video</title>
+  <title>Wallpaper</title>
   <style>
     html, body {
       margin: 0;
@@ -19,12 +19,13 @@
       overflow: hidden;
     }
 
-    .video-iframe {
+    video {
       position: absolute;
       top: 0;
       left: 0;
       width: 150vw;
-      height: 150vh;
+      height: auto;
+      object-fit: cover;
       pointer-events: none;
       transition: transform 0.1s ease-out;
       will-change: transform;
@@ -33,27 +34,24 @@
 </head>
 <body>
   <div class="video-container">
-    <iframe
-      class="video-iframe"
-      src="https://www.youtube.com/embed/or9NlUR0cQY?autoplay=1&mute=1&loop=1&playlist=or9NlUR0cQY&controls=0&showinfo=0&modestbranding=1&rel=0"
-      frameborder="0"
-      allow="autoplay; encrypted-media"
-      allowfullscreen
-    ></iframe>
+    <video id="bg-video" autoplay muted loop playsinline>
+      <source src="video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <script>
-    const iframe = document.querySelector('.video-iframe');
+    const video = document.getElementById('bg-video');
 
     window.addEventListener('mousemove', (e) => {
       const vw = window.innerWidth;
       const vh = window.innerHeight;
 
-      const iframeW = iframe.offsetWidth;
-      const iframeH = iframe.offsetHeight;
+      const videoW = video.offsetWidth;
+      const videoH = video.offsetHeight;
 
-      const maxX = iframeW - vw;
-      const maxY = iframeH - vh;
+      const maxX = videoW - vw;
+      const maxY = videoH - vh;
 
       const percentX = e.clientX / vw;
       const percentY = e.clientY / vh;
@@ -61,7 +59,7 @@
       const offsetX = -maxX * percentX;
       const offsetY = -maxY * percentY;
 
-      iframe.style.transform = `translate(${offsetX}px, ${offsetY}px)`;
+      video.style.transform = `translate(${offsetX}px, ${offsetY}px)`;
     });
   </script>
 </body>
