--- a/screensaverwallpaper/index.html
+++ b/screensaverwallpaper/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Wallpaper</title>
+  <meta charset="UTF-8" />
+  <title>Mouse-Following Local Video</title>
   <style>
     html, body {
       margin: 0;
@@ -11,14 +11,12 @@
       height: 100%;
       background-color: #111;
     }
-
     .video-container {
       position: relative;
       width: 100vw;
       height: 100vh;
       overflow: hidden;
     }
-
     video {
       position: absolute;
       top: 0;
@@ -35,13 +33,15 @@
 <body>
   <div class="video-container">
     <video id="bg-video" autoplay muted loop playsinline>
-      <source src="video.mp4" type="video/mp4">
+      <source src="./video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
   <script>
     const video = document.getElementById('bg-video');
+
+    video.onerror = () => console.log('Video failed to load!');
 
     window.addEventListener('mousemove', (e) => {
       const vw = window.innerWidth;
