--- a/wallpaper/index.html
+++ b/wallpaper/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mouse-Following YouTube Video</title>
+  <meta charset="UTF-8" />
+  <title>Restricted Horizontal Movement Video</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      height: 100%;
-      background-color: #111;
+      margin: 0; padding: 0; overflow: hidden; height: 100%; background-color: #111;
     }
-
     .video-container {
       position: relative;
       width: 100vw;
       height: 100vh;
       overflow: hidden;
     }
-
     .video-iframe {
       position: absolute;
       top: 0;
@@ -58,7 +52,9 @@
       const percentX = e.clientX / vw;
       const percentY = e.clientY / vh;
 
-      const offsetX = -maxX * percentX;
+      let offsetX = -maxX * percentX;
+      offsetX = Math.min(-50, Math.max(offsetX, -maxX + 50));
+
       const offsetY = -maxY * percentY;
 
       iframe.style.transform = `translate(${offsetX}px, ${offsetY}px)`;
