--- a/wallpaper/index.html
+++ b/wallpaper/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Restricted Horizontal Movement Video</title>
+  <title>Wallpaper</title>
   <style>
     html, body {
       margin: 0; padding: 0; overflow: hidden; height: 100%; background-color: #111;
