--- a/countdown/index.html
+++ b/countdown/index.html
@@ -35,12 +35,12 @@
 <body>
 
   <div class="timer-box">
-    <div class="timer-title">Timer 1</div>
+    <div class="timer-title">Fri fra skole</div>
     <div id="countdown1">Loading...</div>
   </div>
 
   <div class="timer-box">
-    <div class="timer-title">JS Timer 2</div>
+    <div class="timer-title">Vigsø</div>
     <div id="countdown2">Loading...</div>
   </div>
 
